--- a/index.html
+++ b/index.html
@@ -5,11 +5,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/style.css">
     <title>Dropbox</title>
 </head>
 
 <body>
+
+    <div class="nav flex-box">
+
+        <div class="logo">
+            <img src="./image/logo-small.png" alt="logo">
+        </div>
+
+        <div class="menu flex-box">
+
+            <div class="menu-box menu-left">
+                <ul class="flex-box">
+                    <li>Perche Dropbox</li>
+                    <li>Funzioni</li>
+                    <li>Piani e Prezzi</li>
+                </ul>
+            </div>
+
+            <div class="menu-box menu-right flex-box">
+                <ul class="flex-box">
+                    <li>Supporto</li>
+                    <li>Contatta l'ufficio vendite</li>
+                    <li>Accedi</li>
+                </ul>
+                <div class="button small-button">
+                    <a href="#">Inizia</a>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="hero">
+
+        <div class="hero-box">
+            <h1>Tutto cio che ti serve per il <br> lavoro, in un unico posto</h1>
+
+            <div class="hero-box-section flex-box">
+
+                <div class="section">
+
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos excepturi tempore dolore veniam
+                        nobis aut amet ipsum sequi eos necessitatibus neque voluptate soluta iusto, modi est repellat
+                        molestias incidunt repudiandae.</p>
+
+                    <div class="button">
+                        <a href="#">Inizia la tua prova gratuita</a>
+                    </div>
+
+                    <p>Annulla in qualsiasi momento</p>
+
+                    <div class="arrow">
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+
+                </div>
+
+                <div class="hero-image">
+                    <img src="./image/jumbo.png" alt="Jumbo">
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
 
 </body>
 
