main/plan-section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,217 @@
 
     </div>
 
+
+    <div class="main-container">
+
+        <h2>Trova il business che fa per te</h2>
+
+        <div class="select">
+            <form action="">
+                <input type="radio" id="mensile">
+                <label for="mensile">Fatturazione mensile</label>
+                <input type="radio" id="annuale">
+                <label for="annuale">Fatturazione annuale</label>
+            </form>
+        </div>
+
+        <div class="plan-box flex-box">
+
+            <div class="plan">
+
+                <div class="plan-title">
+                    <i class="fa-solid fa-user"></i>
+                    <span>Singolo</span>
+                </div>
+
+                <div class="plan-container">
+
+                    <div class="plan-description">
+
+                        <h2>Professional</h2>
+
+                        <span>$ 12.00 <br> /mese</span>
+
+                    </div>
+
+                    <div class="plan-content">
+
+                        <div class="plan-content-item" flex-box>
+                            <i class="fa-solid fa-user"></i>
+                            <span>1 utente</span>
+                        </div>
+
+                        <div class="plan-content-item flex-box">
+                            <i class="fa-solid fa-folder"></i>
+                            <span>5 TB di psazio di archiviazione sicuro</span>
+                        </div>
+
+                        <div class="plan-content-item flex-box">
+                            <i class="fa-solid fa-share-nodes"></i>
+                            <span>Funzioni di produttivita premium e condivisione file semplice</span>
+                        </div>
+
+                    </div>
+
+                    <div class="buy">
+
+                        <div class="button">
+                            <a href="#">Prova gratis per 30 giorni</a>
+                        </div>
+
+                        <span class="option">oppure <a href="#">aquista ora</a></span>
+
+                    </div>
+
+
+                    <div class="feature">
+
+                        <h4>Punti salienti del piano</h4>
+
+                        <div class="feature-item">
+                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+
+            </div>
+
+            <div class="plan">
+
+                <div class="plan-title">
+                    <i class="fa-solid fa-user"></i>
+                    <span>Singolo</span>
+                </div>
+
+                <div class="plan-container">
+
+                    <div class="plan-description">
+
+                        <h2>Professional</h2>
+
+                        <span>$ 12.00 <br> /mese</span>
+
+                    </div>
+
+                    <div class="plan-content">
+
+                        <div class="plan-content-item" flex-box>
+                            <i class="fa-solid fa-user"></i>
+                            <span>1 utente</span>
+                        </div>
+
+                        <div class="plan-content-item flex-box">
+                            <i class="fa-solid fa-folder"></i>
+                            <span>5 TB di psazio di archiviazione sicuro</span>
+                        </div>
+
+                        <div class="plan-content-item flex-box">
+                            <i class="fa-solid fa-share-nodes"></i>
+                            <span>Funzioni di produttivita premium e condivisione file semplice</span>
+                        </div>
+
+                    </div>
+
+                    <div class="buy">
+
+                        <div class="button">
+                            <a href="#">Prova gratis per 30 giorni</a>
+                        </div>
+
+                        <span class="option">oppure <a href="#">aquista ora</a></span>
+
+                    </div>
+
+
+                    <div class="feature">
+
+                        <h4>Punti salienti del piano</h4>
+
+                        <div class="feature-item">
+                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+
+            </div>
+
+            <div class="plan">
+
+                <div class="plan-title">
+                    <i class="fa-solid fa-user"></i>
+                    <span>Singolo</span>
+                </div>
+
+                <div class="plan-container">
+
+                    <div class="plan-description">
+
+                        <h2>Professional</h2>
+
+                        <span>$ 12.00 <br> /mese</span>
+
+                    </div>
+
+                    <div class="plan-content">
+
+                        <div class="plan-content-item" flex-box>
+                            <i class="fa-solid fa-user"></i>
+                            <span>1 utente</span>
+                        </div>
+
+                        <div class="plan-content-item flex-box">
+                            <i class="fa-solid fa-folder"></i>
+                            <span>5 TB di psazio di archiviazione sicuro</span>
+                        </div>
+
+                        <div class="plan-content-item flex-box">
+                            <i class="fa-solid fa-share-nodes"></i>
+                            <span>Funzioni di produttivita premium e condivisione file semplice</span>
+                        </div>
+
+                    </div>
+
+                    <div class="buy">
+
+                        <div class="button">
+                            <a href="#">Prova gratis per 30 giorni</a>
+                        </div>
+
+                        <span class="option">oppure <a href="#">aquista ora</a></span>
+
+                    </div>
+
+
+                    <div class="feature">
+
+                        <h4>Punti salienti del piano</h4>
+
+                        <div class="feature-item">
+                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+
+            </div>
+
+        </div>
+
+
+    </div>
+
+
 </body>
 
 </html>
