main/plan-enterprise

--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
 
         <div class="select">
             <form action="">
-                <input type="radio" id="mensile">
+                <input type="radio" id="mensile" name="radio">
                 <label for="mensile">Fatturazione mensile</label>
-                <input type="radio" id="annuale">
+
+                <input type="radio" id="annuale" name="radio">
                 <label for="annuale">Fatturazione annuale</label>
             </form>
         </div>
@@ -147,7 +148,13 @@
 
                         <h4>Punti salienti del piano</h4>
 
-                        <div class="feature-item">
+                        <div class="feature-item flex-box">
+                            <i class="fa-solid fa-check"></i>
+                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                        </div>
+
+                        <div class="feature-item flex-box">
+                            <i class="fa-solid fa-check"></i>
                             <span>Invia file fino a 100 GB con Dropbox Transfert</span>
                         </div>
 
@@ -155,15 +162,13 @@
 
                 </div>
 
-
-
             </div>
 
             <div class="plan">
 
                 <div class="plan-title">
-                    <i class="fa-solid fa-user"></i>
-                    <span>Singolo</span>
+                    <i class="fa-solid fa-users"></i>
+                    <span>Team</span>
                 </div>
 
                 <div class="plan-container">
@@ -210,7 +215,28 @@
 
                         <h4>Punti salienti del piano</h4>
 
-                        <div class="feature-item">
+                        <div class="feature-item flex-box">
+                            <i class="fa-solid fa-check"></i>
+                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                        </div>
+
+                        <div class="feature-item flex-box">
+                            <i class="fa-solid fa-check"></i>
+                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                        </div>
+
+                        <div class="feature-item flex-box">
+                            <i class="fa-solid fa-check"></i>
+                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                        </div>
+
+                        <div class="feature-item flex-box">
+                            <i class="fa-solid fa-check"></i>
+                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                        </div>
+
+                        <div class="feature-item flex-box">
+                            <i class="fa-solid fa-check"></i>
                             <span>Invia file fino a 100 GB con Dropbox Transfert</span>
                         </div>
 
@@ -225,15 +251,15 @@
             <div class="plan">
 
                 <div class="plan-title">
-                    <i class="fa-solid fa-user"></i>
-                    <span>Singolo</span>
+                    <i class="fa-solid fa-building"></i>
+                    <span>Azienda</span>
                 </div>
 
                 <div class="plan-container">
 
                     <div class="plan-description">
 
-                        <h2>Professional</h2>
+                        <h2>Enterprise</h2>
 
                         <span>$ 12.00 <br> /mese</span>
 
@@ -273,20 +299,60 @@
 
                         <h4>Punti salienti del piano</h4>
 
-                        <div class="feature-item">
+                        <div class="feature-item flex-box">
+                            <i class="fa-solid fa-check"></i>
+                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                        </div>
+
+                        <div class="feature-item flex-box">
+                            <i class="fa-solid fa-check"></i>
+                            <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                        </div>
+
+                        <div class="feature-item flex-box">
+                            <i class="fa-solid fa-check"></i>
                             <span>Invia file fino a 100 GB con Dropbox Transfert</span>
                         </div>
 
                     </div>
 
                 </div>
-
-
 
             </div>
 
         </div>
 
+        <div class="plan-enterprise">
+
+            <div class="plan-title">
+                <i class="fa-solid fa-building"></i>
+                <span>Team</span>
+            </div>
+
+            <div class="plan-container flex-box">
+
+                <div class="plan-enterprise-left">
+
+                    <h2>Enterprise</h2>
+
+                    <h4>Contatta l'ufficio vendite per i prezzi</h4>
+
+                    <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su
+                        qualsiasi scala.</p>
+
+                </div>
+
+                <div class="plan-enterprise-right">
+
+                    <div class="button">
+                        <a href="#">Contatta l'ufficio vendite</a>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
 
     </div>
 
