--- a/index.html
+++ b/index.html
@@ -54,18 +54,20 @@
 
                 <div class="section">
 
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos excepturi tempore dolore veniam
-                        nobis aut amet ipsum sequi eos necessitatibus neque voluptate soluta iusto, modi est repellat
-                        molestias incidunt repudiandae.</p>
+                    <p>
+                        Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accesibili dallo stesso posto.
+                        Dropbox Business e piu di uno spazio di archiviazione sicuro: e un modo intelligente e integrato
+                        per ottimizzare il flusso di lavoro esistemte.
+                    </p>
 
-                    <div class="button">
+                    <div class="button hero-button">
                         <a href="#">Inizia la tua prova gratuita</a>
                     </div>
 
                     <p>Annulla in qualsiasi momento</p>
 
                     <div class="arrow">
-                        <i class="fa-solid fa-arrow-down"></i>
+                        <a href="#main-link"><i class="fa-solid fa-arrow-down"></i></a>
                     </div>
 
                 </div>
@@ -82,6 +84,9 @@
 
 
     <div class="main-container">
+
+        <div id="main-link">
+        </div>
 
         <h2>Trova il business che fa per te</h2>
 
@@ -110,7 +115,8 @@
 
                         <h2>Professional</h2>
 
-                        <span>$ 12.00 <br> /mese</span>
+                        <span>$ 12.00 </span>
+                        <span class="plan-price-color">/mese</span>
 
                     </div>
 
@@ -175,9 +181,10 @@
 
                     <div class="plan-description">
 
-                        <h2>Professional</h2>
+                        <h2>Advanced</h2>
 
-                        <span>$ 12.00 <br> /mese</span>
+                        <span>$ 12.00 </span>
+                        <span class="plan-price-color">/mese</span>
 
                     </div>
 
@@ -261,7 +268,8 @@
 
                         <h2>Enterprise</h2>
 
-                        <span>$ 12.00 <br> /mese</span>
+                        <span>$ 12.00 </span>
+                        <span class="plan-price-color">/mese</span>
 
                     </div>
 
@@ -348,6 +356,30 @@
                         <a href="#">Contatta l'ufficio vendite</a>
                     </div>
 
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="partner-box flex-box">
+
+            <div class="partner-image">
+                <img src="./image/partner.png" alt="partner">
+            </div>
+
+            <div class="partner-section">
+
+                <h2>Entra in contatto con un partner Dropbox</h2>
+
+                <p>
+                    Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per
+                    raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e
+                    supportocontinui.
+                </p>
+
+                <div class="button partner-button">
+                    <a href="#">Trova un partner</a>
                 </div>
 
             </div>
