main/card-section

--- a/index.html
+++ b/index.html
@@ -386,6 +386,107 @@
 
         </div>
 
+
+        <div class="cards-container">
+
+            <h2>Esegui piu operazioni con Dropbox Business</h2>
+
+            <div class="cards-box flex-box">
+
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./image/business-feature-switching-tools.png" alt="business-switching">
+                    </div>
+                    <h4>Passa di meno da uno strumento all'altro</h4>
+                    <p>
+                        Porta a termine le attività quotidiane
+                        con un solo strumento. Crea, modifica e
+                        condividi contenuti cloud da
+                        Documenti, Fogli e Presentazioni di
+                        Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox.
+                    </p>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./image/business-feature-send-files-it.png" alt="business-send">
+                    </div>
+                    <h4>Passa di meno da uno strumento all'altro</h4>
+                    <p>
+                        Porta a termine le attività quotidiane
+                        con un solo strumento. Crea, modifica e
+                        condividi contenuti cloud da
+                        Documenti, Fogli e Presentazioni di
+                        Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox.
+                    </p>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./image/business-feature-security.png" alt="business-security">
+                    </div>
+                    <h4>Passa di meno da uno strumento all'altro</h4>
+                    <p>
+                        Porta a termine le attività quotidiane
+                        con un solo strumento. Crea, modifica e
+                        condividi contenuti cloud da
+                        Documenti, Fogli e Presentazioni di
+                        Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox.
+                    </p>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./image/business-feature-multi-device.png" alt="business-device">
+                    </div>
+                    <h4>Passa di meno da uno strumento all'altro</h4>
+                    <p>
+                        Porta a termine le attività quotidiane
+                        con un solo strumento. Crea, modifica e
+                        condividi contenuti cloud da
+                        Documenti, Fogli e Presentazioni di
+                        Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox.
+                    </p>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./image/business-feature-integrations-it.png" alt="business-integrations">
+                    </div>
+                    <h4>Passa di meno da uno strumento all'altro</h4>
+                    <p>
+                        Porta a termine le attività quotidiane
+                        con un solo strumento. Crea, modifica e
+                        condividi contenuti cloud da
+                        Documenti, Fogli e Presentazioni di
+                        Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox.
+                    </p>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./image/business-feature-coordinate-it.png" alt="business-coordinate">
+                    </div>
+                    <h4>Passa di meno da uno strumento all'altro</h4>
+                    <p>
+                        Porta a termine le attività quotidiane
+                        con un solo strumento. Crea, modifica e
+                        condividi contenuti cloud da
+                        Documenti, Fogli e Presentazioni di
+                        Google, file Microsoft Office e Dropbox
+                        Paper direttamente da Dropbox.
+                    </p>
+                </div>
+
+            </div>
+
+        </div>
+
     </div>
 
 
