--- a/index.html
+++ b/index.html
@@ -487,6 +487,18 @@
 
         </div>
 
+        <div class="use-info">
+
+            <h2>
+                Più di 500.000 team utilizzano
+                Dropbox Business
+            </h2>
+
+
+            <span><a href="#">Scopri di più sui nostri clienti</a></span>
+
+        </div>
+
     </div>
 
 
