--- a/index.html
+++ b/index.html
@@ -502,6 +502,67 @@
     </div>
 
 
+    <div class="test-container flex-box">
+
+        <div class="square flex-box">
+
+            <div class="logo-square">
+                <img src="./image/designit.svg" alt="designit">
+            </div>
+
+            <div class="logo-square">
+                <img src="./image/designit.svg" alt="designit">
+            </div>
+
+            <div class="logo-square">
+                <img src="./image/designit.svg" alt="designit">
+            </div>
+
+            <div class="logo-square">
+                <img src="./image/designit.svg" alt="designit">
+            </div>
+
+        </div>
+
+        <div class="square flex-box">
+        </div>
+
+        <div class="square flex-box">
+
+            <div class="logo-square">
+            </div>
+
+            <div class="logo-square">
+            </div>
+
+            <div class="logo-square">
+            </div>
+
+            <div class="logo-square">
+            </div>
+
+
+        </div>
+
+
+
+    </div>
+
+
+    <div class="try-section">
+
+        <div class="try flex-box">
+            <h2>Porta Dropbox Business nella tua azienda.</h2>
+
+
+            <div class="button try-button">
+                <a href="#">Inizia la prova gratuita</a>
+            </div>
+        </div>
+
+    </div>
+
+
 </body>
 
 </html>
