--- a/index.html
+++ b/index.html
@@ -563,6 +563,55 @@
     </div>
 
 
+    <div class="main-container">
+
+        <h2>Domande frequenti</h2>
+
+        <div class="questions-box">
+            <div class="questions-items flex-box">
+                <h4>Qual'e la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+            <div class="questions-hidden">
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis velit ab impedit ad reprehenderit
+                    nisi culpa ipsam debitis, voluptate quia molestias tenetur libero unde nam numquam a et obcaecati
+                    eligendi.
+                </p>
+            </div>
+        </div>
+
+        <div class="questions-box">
+            <div class="questions-items flex-box">
+                <h4>Qual'e la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+            <div class="questions-hidden">
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis velit ab impedit ad reprehenderit
+                    nisi culpa ipsam debitis, voluptate quia molestias tenetur libero unde nam numquam a et obcaecati
+                    eligendi.
+                </p>
+            </div>
+        </div>
+
+        <div class="questions-box last">
+            <div class="questions-items flex-box">
+                <h4>Qual'e la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+            <div class="questions-hidden">
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis velit ab impedit ad reprehenderit
+                    nisi culpa ipsam debitis, voluptate quia molestias tenetur libero unde nam numquam a et obcaecati
+                    eligendi.
+                </p>
+            </div>
+        </div>
+
+    </div>
+
+
 </body>
 
 </html>
