--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;600;700;800;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Dropbox</title>
 </head>
@@ -24,15 +28,64 @@
 
             <div class="menu-box menu-left">
                 <ul class="flex-box">
-                    <li>Perche Dropbox</li>
-                    <li>Funzioni</li>
+                    <li>Perche Dropbox
+                        <div class="dropdown flex-box">
+                            <ul>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                            </ul>
+                            <ul>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>Funzioni
+                        <div class="dropdown flex-box">
+                            <ul>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                            </ul>
+                            <ul>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                            </ul>
+                        </div>
+                    </li>
                     <li>Piani e Prezzi</li>
                 </ul>
             </div>
 
             <div class="menu-box menu-right flex-box">
                 <ul class="flex-box">
-                    <li>Supporto</li>
+                    <li>Supporto
+                        <div class="dropdown flex-box">
+                            <ul>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                                <li>Test</li>
+                            </ul>
+                        </div>
+                    </li>
                     <li>Contatta l'ufficio vendite</li>
                     <li>Accedi</li>
                 </ul>
@@ -44,6 +97,8 @@
         </div>
 
     </div>
+
+    <div class="overlay"></div>
 
     <div class="hero">
 
@@ -149,6 +204,7 @@
 
                     </div>
 
+                    <div class="small-line"></div>
 
                     <div class="feature">
 
@@ -217,6 +273,7 @@
 
                     </div>
 
+                    <div class="small-line"></div>
 
                     <div class="feature">
 
@@ -302,6 +359,7 @@
 
                     </div>
 
+                    <div class="small-line"></div>
 
                     <div class="feature">
 
@@ -530,17 +588,20 @@
         <div class="square flex-box">
 
             <div class="logo-square">
+                <img src="./image/designit.svg" alt="designit">
             </div>
 
             <div class="logo-square">
+                <img src="./image/designit.svg" alt="designit">
             </div>
 
             <div class="logo-square">
+                <img src="./image/designit.svg" alt="designit">
             </div>
 
             <div class="logo-square">
+                <img src="./image/designit.svg" alt="designit">
             </div>
-
 
         </div>
 
@@ -607,6 +668,108 @@
                     eligendi.
                 </p>
             </div>
+        </div>
+
+    </div>
+
+
+    <div class="footer">
+
+        <div class="footer-box">
+
+            <div class="footer-container flex-box">
+
+                <div class="footer-col">
+                    <h3>Dropbox</h3>
+
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perche Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+
+                </div>
+
+                <div class="footer-col">
+                    <h3>Prodotti</h3>
+
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perche Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+
+                </div>
+
+                <div class="footer-col">
+                    <h3>Azienda</h3>
+
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perche Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+
+                </div>
+
+                <div class="footer-col">
+                    <h3>Supporto</h3>
+
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perche Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+
+                </div>
+
+                <div class="footer-col">
+                    <h3>Community</h3>
+
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perche Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+
+                </div>
+
+            </div>
+
+            <div class="footer-icons flex-box">
+
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+
+            </div>
+
+            <div class="line">
+            </div>
+
+
+            <div class="language flex-box">
+
+                <i class="fa-solid fa-globe"></i>
+
+                <span>Italiano</span>
+
+                <i class="fa-solid fa-angle-right"></i>
+
+            </div>
+
         </div>
 
     </div>
