--- a/index.html
+++ b/index.html
@@ -80,9 +80,6 @@
                                 <li>Test</li>
                                 <li>Test</li>
                                 <li>Test</li>
-                                <li>Test</li>
-                                <li>Test</li>
-                                <li>Test</li>
                             </ul>
                         </div>
                     </li>
@@ -170,7 +167,7 @@
 
                         <h2>Professional</h2>
 
-                        <span>$ 12.00 </span>
+                        <h4>&#8364 12.00 </h4>
                         <span class="plan-price-color">/mese</span>
 
                     </div>
@@ -239,8 +236,8 @@
 
                         <h2>Advanced</h2>
 
-                        <span>$ 12.00 </span>
-                        <span class="plan-price-color">/mese</span>
+                        <h4>&#8364 18.00</h4>
+                        <span class="plan-price-color">/utente/mese</span>
 
                     </div>
 
@@ -325,8 +322,8 @@
 
                         <h2>Enterprise</h2>
 
-                        <span>$ 12.00 </span>
-                        <span class="plan-price-color">/mese</span>
+                        <h4>Contattaci</h4>
+                        <span class="plan-price-color">-</span>
 
                     </div>
 
@@ -564,43 +561,56 @@
 
         <div class="square flex-box">
 
-            <div class="logo-square">
+            <div class="logo-square logo-square-green">
                 <img src="./image/designit.svg" alt="designit">
             </div>
 
-            <div class="logo-square">
-                <img src="./image/designit.svg" alt="designit">
+            <div class="logo-square logo-square-brown">
+                <img src="./image/arizona_state_university.svg" alt="arizona">
             </div>
 
-            <div class="logo-square">
-                <img src="./image/designit.svg" alt="designit">
+            <div class="logo-square logo-square-pacific-blue">
+                <img src="./image/university_of_florida.svg" alt="florida">
             </div>
 
-            <div class="logo-square">
-                <img src="./image/designit.svg" alt="designit">
+            <div class="logo-square logo-square-torch-red">
+                <img src="./image/topps.svg" alt="topps">
             </div>
 
         </div>
 
-        <div class="square flex-box">
+        <div class="square middle-square">
+
+            <img src="./image/designit.svg" alt="designit">
+
+            <div class="line"></div>
+
+            <p>
+                "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte
+                soluzioni sono compatibili con queste esigenze, ma nessuna e facile quanto Dropbox e Dropbox Paper. Ora
+                molte soluzioni sono compatibili con queste esigenze,ma nessuna e facile quanto Dropbox Paper".
+            </p>
+
+            <span>Morten Thomsen, Global IT Lead</span>
+
         </div>
 
         <div class="square flex-box">
 
-            <div class="logo-square">
-                <img src="./image/designit.svg" alt="designit">
+            <div class="logo-square logo-square-red">
+                <img src="./image/world_bicycle_relief.svg" alt="bicycle">
             </div>
 
-            <div class="logo-square">
-                <img src="./image/designit.svg" alt="designit">
+            <div class="logo-square logo-square-spindle">
+                <img src="./image/hearst_corp.svg" alt="hearst">
             </div>
 
-            <div class="logo-square">
-                <img src="./image/designit.svg" alt="designit">
+            <div class="logo-square logo-square-catalina-blue">
+                <img src="./image/lonely_planet.svg" alt="lonely">
             </div>
 
-            <div class="logo-square">
-                <img src="./image/designit.svg" alt="designit">
+            <div class="logo-square logo-square-yellow">
+                <img src="./image/clear_channel.svg" alt="clear">
             </div>
 
         </div>
