sing-up-page/footer

--- a/pages/sing-up.html
+++ b/pages/sing-up.html
@@ -99,7 +99,70 @@
 
 
 
+    <div class="footer">
+        <div class="footer-box flex-box">
+            <div class="footer-col">
+                <h5>Dropbox</h5>
+                <ul>
+                    <li>Installa</li>
+                    <li>Dropbox mobile</li>
+                    <li>Prezzi</li>
+                    <li>Business</li>
+                    <li>Enterprise</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
 
+            <div class="footer-col">
+                <h5>Dropbox</h5>
+                <ul>
+                    <li>Installa</li>
+                    <li>Dropbox mobile</li>
+                    <li>Prezzi</li>
+                    <li>Business</li>
+                    <li>Enterprise</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h5>Dropbox</h5>
+                <ul>
+                    <li>Installa</li>
+                    <li>Dropbox mobile</li>
+                    <li>Prezzi</li>
+                    <li>Business</li>
+                    <li>Enterprise</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h5>Dropbox</h5>
+                <ul>
+                    <li>Installa</li>
+                    <li>Dropbox mobile</li>
+                    <li>Prezzi</li>
+                    <li>Business</li>
+                    <li>Enterprise</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+
+
+            <div class="language flex-box">
+
+                <i class="fa-solid fa-globe"></i>
+
+                <span>Italiano</span>
+
+                <i class="fa-solid fa-angle-right"></i>
+
+            </div>
+
+        </div>
+
+    </div>
 
 
 </body>
